<resources>
    <string name="app_name">Sispen Boulder</string>
    <string name="main_welcome">Selamat Datang</string>

    <string name="txt_top">Top</string>
    <string name="txt_at">AT</string>
    <string name="txt_bonus">Bonus</string>
    <string name="txt_ab">AB</string>
    <string name="alt_default">0</string>
    <string name="btn_konfirmasi">Konfirmasi</string>
    <string name="type_detail">Pastikan tipe akun anda sesuai, karena hanya dapat dipilih sekali.</string>
    <string name="tanggal_event">Tanggal Event</string>
    <string name="waktu_event">Waktu Event</string>
    <string name="lokasi_event">Lokasi Event</string>
    <string name="nama_event">Nama Event</string>
    <string name="display_time">%s:%s</string>
    <string name="grade_default">0</string>
    <string name="top">T</string>
    <string name="at">AT</string>
    <string name="bonus">B</string>
    <string name="ab">AB</string>
    <string name="jumlah">Total</string>
    <string name="prioritas">Prioritas</string>
    <string name="ahp_eigen">Eigen Max = %s</string>
    <string name="ahp_ci">Consistency Index = %s</string>
    <string name="ahp_cr">Consistency Ratio = %s</string>
    <string name="txt_ahp">AHP</string>
    <string name="txt_topsis">TOPSIS</string>
    <string name="txt_jumlah_peserta">Jumlah Peserta : %s</string>
    <string name="txt_btn_add_participant">Tambah Peserta</string>
    <string name="txt_error">Mohon Masukkan %s</string>
    <string name="btn_total_wall">Tombol Konfirmasi Jumlah Dinding</string>
    <string name="tambah_event">Tambah Event</string>
</resources>