<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CriteriaActivity"
    android:orientation="vertical"
    android:padding="32dp">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_top"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/alt11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/alt11"
        style="@style/EditTextNumber"
        app:layout_constraintEnd_toEndOf="@+id/alt21"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_at"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/alt12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/alt12"
        style="@style/EditTextNumber"
        app:layout_constraintStart_toStartOf="@+id/alt22"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_top"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/alt21"
        app:layout_constraintEnd_toStartOf="@+id/alt21"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/alt21" />

    <EditText
        android:id="@+id/alt21"
        style="@style/EditTextNumber"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/alt31"
        app:layout_constraintTop_toBottomOf="@+id/alt11" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_bonus"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/alt22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/alt22" />

    <EditText
        android:id="@+id/alt22"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        style="@style/EditTextNumber"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/alt12" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_top"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/alt31"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/alt31" />

    <EditText
        android:id="@+id/alt31"
        android:layout_marginTop="16dp"
        style="@style/EditTextNumber"
        app:layout_constraintEnd_toEndOf="@+id/alt41"
        app:layout_constraintTop_toBottomOf="@+id/alt21" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_ab"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/alt32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/alt32" />

    <EditText
        android:id="@+id/alt32"
        style="@style/EditTextNumber"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/alt22"
        app:layout_constraintTop_toBottomOf="@+id/alt22" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_bonus"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/alt41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/alt41" />

    <EditText
        android:id="@+id/alt41"
        android:layout_marginTop="16dp"
        android:layout_marginStart="12dp"
        style="@style/EditTextNumber"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/alt31" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_at"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/alt42"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/alt42" />

    <EditText
        android:id="@+id/alt42"
        android:layout_marginTop="16dp"
        style="@style/EditTextNumber"
        app:layout_constraintStart_toStartOf="@+id/alt32"
        app:layout_constraintTop_toBottomOf="@+id/alt32" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_bonus"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/alt51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/alt51" />

    <EditText
        android:id="@+id/alt51"
        android:layout_marginTop="16dp"
        style="@style/EditTextNumber"
        app:layout_constraintEnd_toEndOf="@+id/alt41"
        app:layout_constraintTop_toBottomOf="@+id/alt41" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_ab"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/alt52"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/alt52" />

    <EditText
        android:id="@+id/alt52"
        android:layout_marginTop="16dp"
        style="@style/EditTextNumber"
        app:layout_constraintStart_toStartOf="@+id/alt42"
        app:layout_constraintTop_toBottomOf="@+id/alt42" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_at"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/alt61"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/alt61" />

    <EditText
        android:id="@+id/alt61"
        style="@style/EditTextNumber"
        app:layout_constraintEnd_toEndOf="@+id/alt51"
        app:layout_constraintTop_toBottomOf="@+id/alt51"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_ab"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/alt62"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/alt62" />

    <EditText
        android:id="@+id/alt62"
        style="@style/EditTextNumber"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/alt52"
        app:layout_constraintTop_toBottomOf="@+id/alt52" />


    <TextView
        android:id="@+id/txt_criteriaResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="@string/alt_default"
        android:gravity="center"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_confirmCriteria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_confirmCriteria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_konfirmasi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>